--- a/src/app/components/country/country.component.html
+++ b/src/app/components/country/country.component.html
@@ -1,1 +1,63 @@
-<p>country works!</p>
+<div class="container">
+  <h1>{{ countryName }} - Holidays</h1>
+
+  <!-- Year Switching Buttons -->
+<!--  <div class="year-switcher">-->
+<!--    <span>Select Year:</span>-->
+<!--    <div class="year-buttons">-->
+<!--      @for(year of years; track year){-->
+<!--      <button-->
+<!--        mat-button-->
+<!--        [color]="year === selectedYear ? 'primary' : ''"-->
+<!--        (click)="onYearSelected(year)">-->
+<!--        {{ year }}-->
+<!--      </button>-->
+<!--      }-->
+<!--    </div>-->
+<!--  </div>-->
+
+  <!-- Holidays Table -->
+<!--  <div  class="spinner-container">-->
+<!--    @if(isLoadingHolidays){-->
+<!--    <mat-spinner></mat-spinner>-->
+<!--    }-->
+<!--  </div>-->
+<!--  @if(!isLoadingHolidays && holidays.length > 0){-->
+<!--  <table mat-table [dataSource]="holidays" class="mat-elevation-z8">-->
+
+<!--    &lt;!&ndash; Holiday Name Column &ndash;&gt;-->
+<!--    <ng-container matColumnDef="name">-->
+<!--      <th mat-header-cell *matHeaderCellDef> Holiday Name </th>-->
+<!--      <td mat-cell *matCellDef="let holiday"> {{ holiday.name }} </td>-->
+<!--    </ng-container>-->
+
+<!--    &lt;!&ndash; Local Name Column &ndash;&gt;-->
+<!--    <ng-container matColumnDef="localName">-->
+<!--      <th mat-header-cell *matHeaderCellDef> Local Name </th>-->
+<!--      <td mat-cell *matCellDef="let holiday"> {{ holiday.localName }} </td>-->
+<!--    </ng-container>-->
+
+<!--    &lt;!&ndash; Date Column &ndash;&gt;-->
+<!--    <ng-container matColumnDef="date">-->
+<!--      <th mat-header-cell *matHeaderCellDef> Date </th>-->
+<!--      <td mat-cell *matCellDef="let holiday"> {{ holiday.date | date }} </td>-->
+<!--    </ng-container>-->
+
+<!--    &lt;!&ndash; Type Column &ndash;&gt;-->
+<!--    <ng-container matColumnDef="type">-->
+<!--      <th mat-header-cell *matHeaderCellDef> Type </th>-->
+<!--      <td mat-cell *matCellDef="let holiday"> {{ holiday.type }} </td>-->
+<!--    </ng-container>-->
+
+<!--    &lt;!&ndash; Header and Row Declarations &ndash;&gt;-->
+<!--    <tr mat-header-row *matHeaderRowDef="['name', 'localName', 'date', 'type']"></tr>-->
+<!--    <tr mat-row *matRowDef="let row; columns: ['name', 'localName', 'date', 'type'];"></tr>-->
+<!--  </table>-->
+<!--  }-->
+  <!-- No Holidays Found Message -->
+  <div >
+    @if(holidays.length === 0){
+    <p>No holidays found for the selected year.</p>
+    }
+  </div>
+</div>
