<li> element without dot markers

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -11,6 +11,10 @@ input, button, .random-countries, .country-list {
   margin: 10px 0;
 }
 
+.country-list>li {
+  list-style-type: none;
+}
+
 .error-message {
   color: red;
   margin-top: 10px;
