--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -11,7 +11,7 @@ input, button, .random-countries, .country-list {
   margin: 10px 0;
 }
 
-.country-list>li {
+.country-list {
   list-style-type: none;
 }
 
