--- a/src/app/components/country/country.component.html
+++ b/src/app/components/country/country.component.html
@@ -60,7 +60,7 @@
     <p>No holidays found for the selected year.</p>
     }
   </div>
-  <div>
+  <div class="btn">
     <button mat-raised-button color="accent" (click)="goBack()">Back</button>
   </div>
 </div>
