--- a/src/app/components/country/country.component.scss
+++ b/src/app/components/country/country.component.scss
@@ -33,3 +33,9 @@ mat-spinner {
   align-items: center;
   height: 100px;
 }
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
